--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:url" content="https://arsikzhoski228.github.io/MyPortfolioSite/">
     <meta property="og:type" content="website">
 
-    <link rel="icon" href="/img/favicon.png" type="image/x-icon">
+    <link rel="icon" href="favicon.png" type="image/x-icon">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#3498db">
 
@@ -89,4 +89,5 @@
         });
     </script>
 </body>
+
 </html>
