--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Свяжитесь со мной для заказа сайта или консультации через форму обратной связи или соцсети.">
     <link rel="canonical" href="https://ВАШ_НИК.github.io/MyPortfolioSite/contact.html">
     <link rel="stylesheet" href="style.css">
+    <meta property="og:image" content="/img/preview-og.png">
 </head>
 <body>
     <header>
@@ -46,4 +47,5 @@
 
     <footer><p>&copy; 2023 Иван Иванов</p></footer>
 </body>
+
 </html>
