--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Узнайте больше о моем опыте в веб-разработке, навыках и профессиональном пути.">
     <link rel="canonical" href="https://arsikzhoski228.github.io/MyPortfolioSite/about.html">
     <link rel="stylesheet" href="style.css">
+    <meta property="og:image" content="/img/preview-og.png">
 </head>
 <body>
     <header>
@@ -48,4 +49,5 @@
 
     <footer><p>&copy; 2023 Иван Иванов</p></footer>
 </body>
+
 </html>
