--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="description" content="Профессиональное портфолио веб-разработчика Ивана Иванова. Кейсы, навыки и контакты.">
     <meta name="keywords" content="веб-разработка, создание сайтов, портфолио, HTML, CSS, JavaScript">
     <meta name="author" content="Иван Иванов">
-    <link rel="canonical" href="https://arsikzhoski228.github.io/MyPortfolioSite/">
+    <link rel="canonical" href="https://arsikzhoski228.github.io/MyPortfolioSite-2-/">
     
     <meta property="og:title" content="Портфолио">
     <meta property="og:description" content="Посмотрите мои лучшие работы в сфере веб-разработки.">
     <meta property="og:image" content="/img/preview-og.png">
-    <meta property="og:url" content="https://arsikzhoski228.github.io/MyPortfolioSite/">
+    <meta property="og:url" content="https://arsikzhoski228.github.io/MyPortfolioSite-2-/">
     <meta property="og:type" content="website">
 
     <link rel="icon" href="favicon.png" type="image/x-icon">
@@ -26,7 +26,7 @@
       "@context": "https://schema.org",
       "@type": "Person",
       "name": "Иван Иванов",
-      "url": "https://arsikzhoski228.github.io/MyPortfolioSite/",
+      "url": "https://arsikzhoski228.github.io/MyPortfolioSite-2-/",
       "jobTitle": "Web Developer",
       "sameAs": ["https://github.com/arsikzhoski228"]
     }
@@ -91,3 +91,4 @@
 </body>
 
 </html>
+
