--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Контакты | Связаться с Иваном Ивановым</title>
     <meta name="description" content="Свяжитесь со мной для заказа сайта или консультации через форму обратной связи или соцсети.">
-    <link rel="canonical" href="https://ВАШ_НИК.github.io/MyPortfolioSite/contact.html">
+    <link rel="canonical" href="https://arsikzhoski228.github.io/MyPortfolioSite-2-/contact.html">
     <link rel="stylesheet" href="style.css">
     <meta property="og:image" content="/img/preview-og.png">
 </head>
@@ -49,3 +49,4 @@
 </body>
 
 </html>
+
